[package]
name = "pg_parquet"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib","lib"]

[[bin]]
name = "pgrx_embed_pg_parquet"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg_test = []

[dependencies]
arrow = {version = "53", default-features = false}
arrow-schema = {version = "53", default-features = false}
aws-config = { version = "1.5", default-features = false, features = ["rustls"]}
aws-credential-types = {version = "1.2", default-features = false}
futures = "0.3"
object_store = {version = "0.11", default-features = false, features = ["aws"]}
once_cell = "1"
parquet = {version = "53", default-features = false, features = [
    "arrow",
    "snap",
    "brotli",
    "flate2",
    "lz4",
    "zstd",
    "object_store",
]}
pgrx = "=0.12.6"
tokio = {version = "1", default-features = false, features = ["rt", "time", "macros"]}
url = "2.5"

[dev-dependencies]
pgrx-tests = "=0.12.6"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
